terraform/instance.tf
resource "aws_key_pair" "alfalinux" {
  key_name = "alfalinux"
  private_key = "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZWQyNTUxOQAAACCP8JjT4hIBLb5mv/R3WbYsUnPdqXfK/DhEsblxSEVI9AAAAIiqKCoDqigqAwAAAAtzc2gtZWQyNTUxOQAAACCP8JjT4hIBLb5mv/R3WbYsUnPdqXfK/DhEsblxSEVI9AAAAEAwUQIBATAFBgMrZXAEIgQgRQPYoqJzwCNCyP+456qgsY/wmNPiEgEtvma/9HdZtixSc92pd8r8OESxuXFIRUj0AAAAAAECAwQF"
}

resource "aws_instance" "linux-instance" {
  ami           = "ami-009b16df9fcaac611"
  instance_type = "t2.micro"

  subnet_id = aws_subnet.lesson12-subnet-public-3.id

  vpc_security_group_ids = [aws_security_group.lesson12-all.id]
  connection {
      type        = "ssh"
      host        = self.public_ip
      user        = "ubuntu"
      timeout     = "4m"
   }

  tags = {
    "Name" = "linux-instance"
  }

  depends_on = [
    aws_db_instance.lesson12-rds,
  ]
}
